--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="11dp"
         android:gravity="end"
+
         android:text="@string/start_calculator"
         android:textColor="@color/black"
         android:textSize="55sp"
@@ -25,7 +26,7 @@
         android:id="@+id/key_1"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:backgroundTint="@color/teal_200"
+        android:background="@drawable/btn_style"
         android:text="@string/key_1"
         android:textColor="@color/black"
         android:textSize="25sp"
@@ -38,20 +39,20 @@
         android:id="@+id/key_2"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:backgroundTint="@color/teal_200"
+        android:background="@drawable/btn_style"
         android:text="@string/key_2"
         android:textColor="@color/black"
         android:textSize="25sp"
         app:layout_constraintTop_toBottomOf="@id/key_5"
         app:layout_constraintEnd_toStartOf="@id/key_3"
         app:layout_constraintStart_toEndOf="@id/key_1"
-       />
+        />
 
     <Button
         android:id="@+id/key_3"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:backgroundTint="@color/teal_200"
+        android:background="@drawable/btn_style"
         android:text="@string/key_3"
         android:textColor="@color/black"
         android:textSize="25sp"
@@ -63,7 +64,7 @@
         android:id="@+id/key_plus"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:backgroundTint="#9C27B0"
+        android:background="@drawable/btn_style_operator"
         android:text="@string/key_plus"
         android:textColor="@color/white"
         android:textSize="25sp"
@@ -75,7 +76,7 @@
         android:id="@+id/key_4"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:backgroundTint="@color/teal_200"
+        android:background="@drawable/btn_style"
         android:text="@string/key_4"
         android:textColor="@color/black"
         android:textSize="25sp"
@@ -87,7 +88,7 @@
         android:id="@+id/key_5"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:backgroundTint="@color/teal_200"
+        android:background="@drawable/btn_style"
         android:text="@string/key_5"
         android:textColor="@color/black"
         android:textSize="25sp"
@@ -99,7 +100,7 @@
         android:id="@+id/key_6"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:backgroundTint="@color/teal_200"
+        android:background="@drawable/btn_style"
         android:text="@string/key_6"
         android:textColor="@color/black"
         android:textSize="25sp"
@@ -111,7 +112,7 @@
         android:id="@+id/key_minus"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:backgroundTint="#9C27B0"
+        android:background="@drawable/btn_style_operator"
         android:text="@string/key_minus"
         android:textColor="@color/white"
         android:textSize="25sp"
@@ -123,7 +124,7 @@
         android:id="@+id/key_7"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:backgroundTint="@color/teal_200"
+        android:background="@drawable/btn_style"
         android:text="@string/key_7"
         android:textColor="@color/black"
         android:textSize="25sp"
@@ -136,7 +137,7 @@
         android:id="@+id/key_8"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:backgroundTint="@color/teal_200"
+        android:background="@drawable/btn_style"
         android:text="@string/key_8"
         android:textColor="@color/black"
         android:textSize="25sp"
@@ -148,7 +149,7 @@
         android:id="@+id/key_9"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:backgroundTint="@color/teal_200"
+        android:background="@drawable/btn_style"
         android:text="@string/key_9"
         android:textColor="@color/black"
         android:textSize="25sp"
@@ -160,7 +161,7 @@
         android:id="@+id/key_mult"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:backgroundTint="#9C27B0"
+        android:background="@drawable/btn_style_operator"
         android:text="@string/key_mult"
         android:textColor="@color/white"
         android:textSize="25sp"
@@ -173,7 +174,7 @@
         android:layout_width="wrap_content"
         android:layout_height="70dp"
         android:layout_marginEnd="13dp"
-        android:backgroundTint="@color/teal_200"
+        android:background="@drawable/btn_style"
         android:text="@string/key_dot"
         android:textColor="@color/black"
         android:textSize="25sp"
@@ -187,7 +188,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="11dp"
-        android:backgroundTint="@color/teal_200"
+        android:background="@drawable/btn_style"
         android:text="@string/key_0"
         android:textColor="@color/black"
         android:textSize="25sp"
@@ -200,7 +201,7 @@
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:layout_margin="12dp"
-        android:backgroundTint="#3E880A"
+        android:background="@drawable/btn_style_equals"
         android:text="@string/key_equals"
         android:textColor="@color/white"
         android:textSize="25sp"
@@ -212,7 +213,7 @@
         android:id="@+id/key_div"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:backgroundTint="#9C27B0"
+        android:background="@drawable/btn_style_operator"
         android:layout_marginEnd="11dp"
         android:text="@string/key_div"
         android:textColor="@color/white"
