--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -11,25 +11,27 @@
         android:id="@+id/result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="11dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="20dp"
         android:gravity="end"
-
         android:text="@string/start_calculator"
         android:textColor="@color/black"
-        android:textSize="55sp"
+        android:textSize="@dimen/calc_text_result"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/key_8"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/key_1"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:background="@drawable/btn_style"
+        android:layout_height="@dimen/height_btn"
+        android:background="@drawable/btn_style_digits"
         android:text="@string/key_1"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintTop_toBottomOf="@id/key_4"
         app:layout_constraintEnd_toStartOf="@id/key_2"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,11 +40,11 @@
     <Button
         android:id="@+id/key_2"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:background="@drawable/btn_style"
+        android:layout_height="@dimen/height_btn"
+        android:background="@drawable/btn_style_digits"
         android:text="@string/key_2"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintTop_toBottomOf="@id/key_5"
         app:layout_constraintEnd_toStartOf="@id/key_3"
         app:layout_constraintStart_toEndOf="@id/key_1"
@@ -51,11 +53,11 @@
     <Button
         android:id="@+id/key_3"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:background="@drawable/btn_style"
+        android:layout_height="@dimen/height_btn"
+        android:background="@drawable/btn_style_digits"
         android:text="@string/key_3"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintTop_toBottomOf="@id/key_6"
         app:layout_constraintEnd_toStartOf="@id/key_plus"
         app:layout_constraintStart_toEndOf="@id/key_2" />
@@ -63,11 +65,11 @@
     <Button
         android:id="@+id/key_plus"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/height_btn"
         android:background="@drawable/btn_style_operator"
         android:text="@string/key_plus"
         android:textColor="@color/white"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintStart_toEndOf="@id/key_9"
         app:layout_constraintTop_toBottomOf="@id/result"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -75,11 +77,11 @@
     <Button
         android:id="@+id/key_4"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:background="@drawable/btn_style"
+        android:layout_height="@dimen/height_btn"
+        android:background="@drawable/btn_style_digits"
         android:text="@string/key_4"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/key_7"
         app:layout_constraintEnd_toStartOf="@id/key_5"/>
@@ -87,11 +89,11 @@
     <Button
         android:id="@+id/key_5"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:background="@drawable/btn_style"
+        android:layout_height="@dimen/height_btn"
+        android:background="@drawable/btn_style_digits"
         android:text="@string/key_5"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintStart_toEndOf="@id/key_4"
         app:layout_constraintTop_toBottomOf="@id/key_8"
         app:layout_constraintEnd_toStartOf="@id/key_6"/>
@@ -99,11 +101,11 @@
     <Button
         android:id="@+id/key_6"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:background="@drawable/btn_style"
+        android:layout_height="@dimen/height_btn"
+        android:background="@drawable/btn_style_digits"
         android:text="@string/key_6"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintStart_toEndOf="@id/key_5"
         app:layout_constraintTop_toBottomOf="@id/key_9"
         app:layout_constraintEnd_toStartOf="@id/key_minus"/>
@@ -111,11 +113,11 @@
     <Button
         android:id="@+id/key_minus"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/height_btn"
         android:background="@drawable/btn_style_operator"
         android:text="@string/key_minus"
         android:textColor="@color/white"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintStart_toEndOf="@id/key_6"
         app:layout_constraintTop_toBottomOf="@id/key_plus"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -123,11 +125,11 @@
     <Button
         android:id="@+id/key_7"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:background="@drawable/btn_style"
+        android:layout_height="@dimen/height_btn"
+        android:background="@drawable/btn_style_digits"
         android:text="@string/key_7"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/result"
         app:layout_constraintEnd_toStartOf="@id/key_8"/>
@@ -136,11 +138,11 @@
     <Button
         android:id="@+id/key_8"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:background="@drawable/btn_style"
+        android:layout_height="@dimen/height_btn"
+        android:background="@drawable/btn_style_digits"
         android:text="@string/key_8"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintStart_toEndOf="@id/key_7"
         app:layout_constraintTop_toBottomOf="@id/result"
         app:layout_constraintEnd_toStartOf="@id/key_9"/>
@@ -148,11 +150,11 @@
     <Button
         android:id="@+id/key_9"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:background="@drawable/btn_style"
+        android:layout_height="@dimen/height_btn"
+        android:background="@drawable/btn_style_digits"
         android:text="@string/key_9"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintStart_toEndOf="@id/key_8"
         app:layout_constraintTop_toBottomOf="@id/result"
         app:layout_constraintEnd_toStartOf="@id/key_plus"/>
@@ -160,11 +162,11 @@
     <Button
         android:id="@+id/key_mult"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/height_btn"
         android:background="@drawable/btn_style_operator"
         android:text="@string/key_mult"
         android:textColor="@color/white"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintStart_toEndOf="@id/key_3"
         app:layout_constraintTop_toBottomOf="@id/key_minus"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -172,12 +174,12 @@
     <Button
         android:id="@+id/key_dot"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/height_btn"
         android:layout_marginEnd="13dp"
-        android:background="@drawable/btn_style"
+        android:background="@drawable/btn_style_digits"
         android:text="@string/key_dot"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintStart_toEndOf="@id/key_0"
         app:layout_constraintTop_toBottomOf="@id/key_3"
         app:layout_constraintEnd_toStartOf="@id/key_div"/>
@@ -185,13 +187,13 @@
     <Button
         android:id="@+id/key_0"
         android:layout_width="0dp"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/height_btn"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="11dp"
-        android:background="@drawable/btn_style"
+        android:background="@drawable/btn_style_digits"
         android:text="@string/key_0"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/key_1"
         app:layout_constraintEnd_toStartOf="@id/key_dot"/>
@@ -199,12 +201,12 @@
     <Button
         android:id="@+id/key_equals"
         android:layout_width="0dp"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/height_btn"
         android:layout_margin="12dp"
         android:background="@drawable/btn_style_equals"
         android:text="@string/key_equals"
         android:textColor="@color/white"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/key_div"/>
@@ -212,12 +214,12 @@
     <Button
         android:id="@+id/key_div"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/height_btn"
         android:background="@drawable/btn_style_operator"
         android:layout_marginEnd="11dp"
         android:text="@string/key_div"
         android:textColor="@color/white"
-        android:textSize="25sp"
+        android:textSize="@dimen/size_text_btn"
         app:layout_constraintStart_toEndOf="@id/key_dot"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/key_mult"/>
