--- a/app/src/main/res/drawable/btn_style_digits.xml
+++ b/app/src/main/res/drawable/btn_style_digits.xml
@@ -3,7 +3,7 @@
 
 <item>
     <shape android:shape="rectangle">
-        <solid android:color="@color/teal_200"/>
+        <solid android:color="@color/light_green"/>
         <corners android:radius="30dp"/>
         <stroke android:width="2dp"/>
     </shape>
