--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -1,228 +1,297 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+                <!-- Отрисовывваем экран -->
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    >
+    android:orientation="vertical">
 
 
-    <TextView
-        android:id="@+id/result"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:gravity="end"
+
+            android:textColor="@color/black"
+            android:textSize="@dimen/calc_text_result"
+            android:textStyle="bold"
+
+            app:layout_constraintBottom_toTopOf="@id/key_8"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_1"
+            style="?attr/calcActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_1"
+
+            app:layout_constraintBottom_toTopOf="@id/key_0"
+            app:layout_constraintEnd_toStartOf="@id/key_2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/key_4" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_2"
+            style="?attr/calcActionButton"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_2"
+
+            app:layout_constraintBottom_toTopOf="@id/key_0"
+            app:layout_constraintEnd_toStartOf="@id/key_3"
+            app:layout_constraintStart_toEndOf="@id/key_1"
+            app:layout_constraintTop_toBottomOf="@id/key_5" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_3"
+            style="?attr/calcActionButton"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_3"
+
+            app:layout_constraintBottom_toTopOf="@id/key_dot"
+            app:layout_constraintEnd_toStartOf="@id/key_plus"
+            app:layout_constraintStart_toEndOf="@id/key_2"
+            app:layout_constraintTop_toBottomOf="@id/key_6" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_plus"
+            style="@style/CalcButton"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_plus"
+
+            app:layout_constraintBottom_toTopOf="@id/key_minus"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/key_9"
+            app:layout_constraintTop_toBottomOf="@id/result" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_4"
+            style="?attr/calcActionButton"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_4"
+
+            app:layout_constraintBottom_toTopOf="@id/key_1"
+            app:layout_constraintEnd_toStartOf="@id/key_5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/key_7" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_5"
+            style="?attr/calcActionButton"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_5"
+
+            app:layout_constraintBottom_toTopOf="@id/key_2"
+            app:layout_constraintEnd_toStartOf="@id/key_6"
+            app:layout_constraintStart_toEndOf="@id/key_4"
+            app:layout_constraintTop_toBottomOf="@id/key_8" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_6"
+            style="?attr/calcActionButton"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_6"
+
+            app:layout_constraintBottom_toTopOf="@id/key_3"
+            app:layout_constraintEnd_toStartOf="@id/key_minus"
+            app:layout_constraintStart_toEndOf="@id/key_5"
+            app:layout_constraintTop_toBottomOf="@id/key_9" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_minus"
+            style="@style/CalcButton"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_minus"
+
+            app:layout_constraintBottom_toTopOf="@id/key_mult"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/key_6"
+            app:layout_constraintTop_toBottomOf="@id/key_plus" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_7"
+            style="?attr/calcActionButton"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_7"
+
+            app:layout_constraintBottom_toTopOf="@id/key_4"
+            app:layout_constraintEnd_toStartOf="@id/key_8"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/result" />
+
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_8"
+            style="?attr/calcActionButton"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_8"
+
+            app:layout_constraintBottom_toTopOf="@id/key_5"
+            app:layout_constraintEnd_toStartOf="@id/key_9"
+            app:layout_constraintStart_toEndOf="@id/key_7"
+            app:layout_constraintTop_toBottomOf="@id/result" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_9"
+            style="?attr/calcActionButton"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_9"
+
+            app:layout_constraintBottom_toTopOf="@id/key_6"
+            app:layout_constraintEnd_toStartOf="@id/key_plus"
+            app:layout_constraintStart_toEndOf="@id/key_8"
+            app:layout_constraintTop_toBottomOf="@id/result" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_mult"
+            style="@style/CalcButton"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_mult"
+
+            app:layout_constraintBottom_toTopOf="@id/key_div"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/key_3"
+            app:layout_constraintTop_toBottomOf="@id/key_minus" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_dot"
+            style="?attr/calcActionButton"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_dot"
+
+            app:layout_constraintBottom_toTopOf="@id/key_equals"
+            app:layout_constraintEnd_toStartOf="@id/key_div"
+            app:layout_constraintStart_toEndOf="@id/key_0"
+            app:layout_constraintTop_toBottomOf="@id/key_3" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_0"
+            style="?attr/calcActionButton"
+
+            android:layout_width="187dp"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_0"
+
+            app:layout_constraintBottom_toTopOf="@id/key_equals"
+            app:layout_constraintEnd_toStartOf="@id/key_dot"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/key_1" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_equals"
+            style="@style/CalcButton.Equals"
+
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:layout_marginStart="11dp"
+            android:layout_marginEnd="11dp"
+
+            android:text="@string/key_equals"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/key_div" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/key_div"
+            style="@style/CalcButton"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/key_div"
+
+            app:layout_constraintBottom_toTopOf="@id/key_equals"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/key_dot"
+            app:layout_constraintTop_toBottomOf="@id/key_mult" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/theme_1"
+        style="@style/CalcButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="20dp"
-        android:gravity="end"
-        android:text="@string/start_calculator"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="56dp"
+        android:text="@string/theme_1"
         android:textColor="@color/black"
-        android:textSize="@dimen/calc_text_result"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/key_8"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold" />
 
     <Button
-        android:id="@+id/key_1"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_btn"
-        android:background="@drawable/btn_style_digits"
-        android:text="@string/key_1"
+        android:id="@+id/theme_2"
+        style="@style/CalcButton.V2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginEnd="56dp"
+        android:text="@string/theme_2"
         android:textColor="@color/black"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintTop_toBottomOf="@id/key_4"
-        app:layout_constraintEnd_toStartOf="@id/key_2"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        android:textStyle="bold" />
 
     <Button
-        android:id="@+id/key_2"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_btn"
-        android:background="@drawable/btn_style_digits"
-        android:text="@string/key_2"
+        android:id="@+id/theme_3"
+        style="@style/CalcButton.V3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginEnd="56dp"
+        android:text="@string/theme_3"
         android:textColor="@color/black"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintTop_toBottomOf="@id/key_5"
-        app:layout_constraintEnd_toStartOf="@id/key_3"
-        app:layout_constraintStart_toEndOf="@id/key_1"
-        />
+        android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/key_3"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_btn"
-        android:background="@drawable/btn_style_digits"
-        android:text="@string/key_3"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintTop_toBottomOf="@id/key_6"
-        app:layout_constraintEnd_toStartOf="@id/key_plus"
-        app:layout_constraintStart_toEndOf="@id/key_2" />
-
-    <Button
-        android:id="@+id/key_plus"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_btn"
-        android:background="@drawable/btn_style_operator"
-        android:text="@string/key_plus"
-        android:textColor="@color/white"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintStart_toEndOf="@id/key_9"
-        app:layout_constraintTop_toBottomOf="@id/result"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <Button
-        android:id="@+id/key_4"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_btn"
-        android:background="@drawable/btn_style_digits"
-        android:text="@string/key_4"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/key_7"
-        app:layout_constraintEnd_toStartOf="@id/key_5"/>
-
-    <Button
-        android:id="@+id/key_5"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_btn"
-        android:background="@drawable/btn_style_digits"
-        android:text="@string/key_5"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintStart_toEndOf="@id/key_4"
-        app:layout_constraintTop_toBottomOf="@id/key_8"
-        app:layout_constraintEnd_toStartOf="@id/key_6"/>
-
-    <Button
-        android:id="@+id/key_6"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_btn"
-        android:background="@drawable/btn_style_digits"
-        android:text="@string/key_6"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintStart_toEndOf="@id/key_5"
-        app:layout_constraintTop_toBottomOf="@id/key_9"
-        app:layout_constraintEnd_toStartOf="@id/key_minus"/>
-
-    <Button
-        android:id="@+id/key_minus"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_btn"
-        android:background="@drawable/btn_style_operator"
-        android:text="@string/key_minus"
-        android:textColor="@color/white"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintStart_toEndOf="@id/key_6"
-        app:layout_constraintTop_toBottomOf="@id/key_plus"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <Button
-        android:id="@+id/key_7"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_btn"
-        android:background="@drawable/btn_style_digits"
-        android:text="@string/key_7"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/result"
-        app:layout_constraintEnd_toStartOf="@id/key_8"/>
-
-
-    <Button
-        android:id="@+id/key_8"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_btn"
-        android:background="@drawable/btn_style_digits"
-        android:text="@string/key_8"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintStart_toEndOf="@id/key_7"
-        app:layout_constraintTop_toBottomOf="@id/result"
-        app:layout_constraintEnd_toStartOf="@id/key_9"/>
-
-    <Button
-        android:id="@+id/key_9"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_btn"
-        android:background="@drawable/btn_style_digits"
-        android:text="@string/key_9"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintStart_toEndOf="@id/key_8"
-        app:layout_constraintTop_toBottomOf="@id/result"
-        app:layout_constraintEnd_toStartOf="@id/key_plus"/>
-
-    <Button
-        android:id="@+id/key_mult"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_btn"
-        android:background="@drawable/btn_style_operator"
-        android:text="@string/key_mult"
-        android:textColor="@color/white"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintStart_toEndOf="@id/key_3"
-        app:layout_constraintTop_toBottomOf="@id/key_minus"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <Button
-        android:id="@+id/key_dot"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_btn"
-        android:layout_marginEnd="13dp"
-        android:background="@drawable/btn_style_digits"
-        android:text="@string/key_dot"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintStart_toEndOf="@id/key_0"
-        app:layout_constraintTop_toBottomOf="@id/key_3"
-        app:layout_constraintEnd_toStartOf="@id/key_div"/>
-
-    <Button
-        android:id="@+id/key_0"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/height_btn"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="11dp"
-        android:background="@drawable/btn_style_digits"
-        android:text="@string/key_0"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/key_1"
-        app:layout_constraintEnd_toStartOf="@id/key_dot"/>
-
-    <Button
-        android:id="@+id/key_equals"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/height_btn"
-        android:layout_margin="12dp"
-        android:background="@drawable/btn_style_equals"
-        android:text="@string/key_equals"
-        android:textColor="@color/white"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/key_div"/>
-
-    <Button
-        android:id="@+id/key_div"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_btn"
-        android:background="@drawable/btn_style_operator"
-        android:layout_marginEnd="11dp"
-        android:text="@string/key_div"
-        android:textColor="@color/white"
-        android:textSize="@dimen/size_text_btn"
-        app:layout_constraintStart_toEndOf="@id/key_dot"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/key_mult"/>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
