--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+            <!-- Описываем размеры -->
     <dimen name="height_btn">70dp</dimen>
     <dimen name="calc_text_result">55sp</dimen>
     <dimen name="size_text_btn">35sp</dimen>
+    <dimen name="margin_digits">3dp</dimen>
 </resources>
