--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,4 +34,10 @@
     </style>
 
 
+    <style name="btn_site">
+        <item name="background">@drawable/gradient</item>
+
+
+    </style>
+
 </resources>
