--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -261,37 +261,17 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/theme_1"
+        android:id="@+id/settings"
         style="@style/CalcButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="56dp"
-        android:text="@string/theme_1"
+        android:text="@string/select_theme"
         android:textColor="@color/black"
         android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/theme_2"
-        style="@style/CalcButton.V2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:layout_marginEnd="56dp"
-        android:text="@string/theme_2"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/theme_3"
-        style="@style/CalcButton.V3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:layout_marginEnd="56dp"
-        android:text="@string/theme_3"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
 
 </LinearLayout>
